AccessibilityMenuList should fire change notification when popup is not open. https://bugs.webkit.org/show_bug.cgi?id=69440

Reviewed by Chris Fleizach.

Source/WebCore:

Test: accessibility/menu-list-sends-change-notification.html

* accessibility/AccessibilityMenuList.cpp:
(WebCore::AccessibilityMenuList::didUpdateActiveOption):

LayoutTests:

* accessibility/menu-list-sends-change-notification.html: Added.
* platform/chromium/accessibility/menu-list-sends-change-notification-expected.txt: Added.


Canonical link: https://commits.webkit.org/85911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97177 268f45cc-cd09-0410-ab3c-d52691b4dbfc